@@ -1,3 +1,6 @@
+* Agent Console: add new function to check whether framework contains support
+  for display of module title.
+
 1.6.1 (SVN revision 3102)
 * Agent Console: perform translation of legacy contact labels for incoming 
   calls into user-friendly values subject to i18n. Fixes Elastix bug #1039. 
